--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.2.21",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
@@ -21,7 +22,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "naive-ui": "^2.34.3"
   },
   "browserslist": [
     "> 1%",
